--- a/onetest.conf
+++ b/onetest.conf
@@ -9,7 +9,7 @@ ipv6 = false
 [Rule]
 RULE-SET,https://cdn.jsdelivr.net/gh/h2y/Shadowrocket-ADBlock-Rules/sr_top500_whitelist.conf,DIRECT
 RULE-SET,https://cdn.jsdelivr.net/gh/DivineEngine/Profiles/Surge/Ruleset/China.list,DIRECT
-RULE-SET,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script/release/rule/Loon/Proxy/Proxy.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Proxy/Proxy.list,PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
 
