--- a/onetest.conf
+++ b/onetest.conf
@@ -311,7 +311,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 微博去广告 = type=http-response,requires-body=true,max-size=1048576,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js,enable=true
 获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
 京东多合一签到 = type=cron,cronexpr="5 0 * * *",timeout=60,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
-京东农场 = type=cron,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_fruit.js,cronexpr="40 8-18/5 * * *",timeout=530,enable=true
+京东农场 = type=cron,cronexpr="40 8-18/5 * * *",timeout=530,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_fruit.js,enable=true
 京东萌宠 = type=cron,cronexpr="20 8-18/5 * * *",timeout=650,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_pet.js, enable=true
 京东宠汪汪 = type=cron,cronexpr="15 */2 * * *",timeout=330,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy.js, enable=true
 宠汪汪喂食 = type=cron,cronexpr="0 0 */2 * * *",timeout=350,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_feedPets.js, enable=true
