--- a/onetest.conf
+++ b/onetest.conf
@@ -5,6 +5,7 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 dns-server = 119.29.29.29, 223.5.5.5, system
 doh-server = https://cdn-doh.ssnm.xyz/dns-query
 ipv6 = false
+update-url = https://cdn.jsdelivr.net/gh/chideap/MyShadowrocket/onetest.conf
 
 [Rule]
 RULE-SET,https://cdn.jsdelivr.net/gh/h2y/Shadowrocket-ADBlock-Rules/sr_top500_whitelist.conf,DIRECT
@@ -12,25 +13,6 @@ RULE-SET,https://cdn.jsdelivr.net/gh/DivineEngine/Profiles/Surge/Ruleset/China.l
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Proxy/Proxy.list,PROXY
 GEOIP,CN,DIRECT
 FINAL,PROXY
-
-[Host]
-*testflight.apple.com = server:8.8.4.4
-*.qq.com = server:119.28.28.28
-*.tencent.com = server:119.28.28.28
-*.weixin.com = server:119.28.28.28
-*.bilibili.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-*.163.com = server:119.29.29.29
-*.126.com = server:119.29.29.29
-*.126.net = server:119.29.29.29
-*.127.net = server:119.29.29.29
-*.netease.com = server:119.29.29.29
-*.mi.com = server:119.29.29.29
-*.xiaomi.com = server:119.29.29.29
-*.pcbeta.com = 120.52.19.113
-cdn.pcbeta.attachment.inimc.com = 120.52.19.113
-cdn.pcbeta.static.inimc.com = 120.52.19.113
-cdn.pcbeta.css.inimc.com = 120.52.19.113
 
 [Host]
 *testflight.apple.com = server:8.8.4.4
