--- a/onetest.conf
+++ b/onetest.conf
@@ -8,8 +8,8 @@ ipv6 = false
 update-url = https://cdn.jsdelivr.net/gh/chideap/MyShadowrocket/onetest.conf
 
 [Rule]
-RULE-SET,https://cdn.jsdelivr.net/gh/DivineEngine/Profiles/Surge/Ruleset/China.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Proxy/Proxy.list,PROXY
+RULE-SET,https://cdn.jsdelivr.net/gh/chideap/ios_rule_script/rule/Shadowrocket/China/China.list,DIRECT
+RULE-SET,https://cdn.jsdelivr.net/gh/chideap/ios_rule_script/rule/Shadowrocket/Proxy/Proxy.list,PROXY
 IP-CIDR,101.124.19.122/32,PROXY,no-resolve
 GEOIP,CN,DIRECT
 FINAL,PROXY
