--- a/onetest.conf
+++ b/onetest.conf
@@ -5,7 +5,7 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 dns-server = 119.29.29.29, 223.5.5.5, system
 doh-server = https://doh.pub/dns-query
 ipv6 = false
-update-url = https://cdn.jsdelivr.net/gh/chideap/MyShadowrocket/onetest.conf
+update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onetest.conf
 
 [Rule]
 RULE-SET,https://cdn.jsdelivr.net/gh/chideap/ios_rule_script/rule/Shadowrocket/China/China.list,DIRECT
@@ -138,8 +138,6 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 ^https?:\/\/api\.applovefrom\.com\/api\/v\d\/splash\/ - reject
 ^https?:\/\/ib-soft\.net\/icleaner\/txt\/ad_priority\.txt$ - reject
 ^https?:\/\/www\.inoreader\.com\/adv\/ - reject
-^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=start - reject
-^https?:\/\/api\.m\.jd.com\/client\.action\?functionId=queryMaterialAdverts - reject
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ - reject
 ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/na\/m\/getLoadingPicture - reject
 ^https?:\/\/img\d+\.360buyimg\.com\/jddjadvertise\/ - reject
@@ -286,9 +284,9 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 ^https?:\/\/saad\.ms\.zhangyue\.net\/ad - reject
 
 [Script]
-京东比价 = type=http-response,requires-body=true,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=1048576,script-path=https://cdn.jsdelivr.net/gh/yichahucha/surge/jd_price.js,enable=true
-淘宝比价1 = type=http-request,script-path=https://cdn.jsdelivr.net/gh/yichahucha/surge/tb_price.js,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,requires-body=true,timeout=10,enable=true
-淘宝比价2 = type=http-response,script-path=https://cdn.jsdelivr.net/gh/yichahucha/surge/tb_price.js,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,requires-body=true,timeout=10,enable=true
+京东比价 = type=http-response,requires-body=true,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,enable=true
+淘宝比价1 = type=http-request,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,requires-body=true,timeout=10,enable=true
+淘宝比价2 = type=http-response,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,requires-body=true,timeout=10,enable=true
 微博 = type=http-response,requires-body=true,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js,enable=true
 微博去广告 = type=http-response,requires-body=true,max-size=1048576,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js,enable=true
 获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
