--- a/onetest.conf
+++ b/onetest.conf
@@ -8,9 +8,9 @@ update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onete
 
 [Rule]
 #RULE-SET,https://cdn.jsdelivr.net/gh/chideap/ios_rule_script/rule/Shadowrocket/Proxy/Proxy.list,PROXY
-#需要更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
-GEOIP,CN,DIRECT
+#需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 IP-CIDR,101.124.19.122/32,PROXY,no-resolve
+GEOIP,CN,DIRECT
 FINAL,PROXY
 
 [Host]
