--- a/onetest.conf
+++ b/onetest.conf
@@ -98,17 +98,16 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 半点红包雨 = type=cron,cronexpr="30,31 12-23/1 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain_half.js
 年货直播红包雨 = type=cron,cronexpr="0 0,9,11,13,15,17,19,20,21,23 3,5,20-30/1 1,2 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain_nian.js
 官方号直播红包雨 = type=cron,cronexpr="0 0,9,11,13,15,17,19,20,21,22,23 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain_offical.js
-盲盒抽京豆 = type=cron,cronexpr="1 7 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_mh.js
 超级直播间幸运值抽京豆 = type=cron,cronexpr="10 20 15 1 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_mh_super.js
-京东秒秒币 = type=cron,cronexpr="10 7 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_ms.js
 京东炸年兽🧨 = type=cron,cronexpr="0 8 * * *",timeout=200,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nian.js
 神券京豆 = type=cron,cronexpr="1 7 13 1 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_super_coupon.js
 海产新年抽奖 = type=cron,cronexpr="10 7 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_sx.js
 京年团圆pick = type=cron,cronexpr="5 0 19,20 1 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_vote.js
 京东粉丝专享 = type=cron,cronexpr="10 0 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js
-小鸽有礼 = type=cron,cronexpr="5 7 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xg.js
+获取京东微信ck = type=http-request,pattern=^https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js,script-update-interval=0
 东东爱消除 = type=cron,cronexpr="0 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xxl.js
 个护爱消除 = type=cron,cronexpr="40 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xxl_gh.js
+获取并提交助力码 = type=cron,script-path=https://gitee.com/qq34347476/quantumult-x/raw/master/get_share_jd_code.js, cronexpr="0 35 2 1,10,20 * ?", timeout=200, enable=true
 网易云获取Cookie = type=http-request,pattern=^https:\/\/music.163.com\/weapi\/user\/level,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,script-update-interval=0
 网易云签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,enable=ture
 中国联通获取Cookie1 = script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js,type=http-request,pattern=^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm
