--- a/onetest.conf
+++ b/onetest.conf
@@ -66,7 +66,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 京东摇京豆 = type=cron,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_club_lottery.js,cronexpr="5 0 * * *",timeout=1150,enable=true
 京东抽奖机 = type=cron,cronexpr=11 0 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js
 京东排行榜 = type=cron,cronexpr=11 9 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js
-京东金融提鹅 = type=cron,cronexpr=10 10 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/barrym-chen/Script/master/tie/tie_sign.js
+京东金融提鹅 = type=cron,cronexpr=10 10 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_daily_egg.js
 京东金融养猪 = type=cron,cronexpr=12 * * * *,timeout=20,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_pigPet.js
 京东特权值 = type=cron,cronexpr=5 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js
 京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=650,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_bean_change.js
@@ -77,7 +77,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 十元街 = type=cron,cronexpr="40 8 * * *",timeout=650,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_syj.js
 领京豆额外奖励 = type=cron,cronexpr="30 10 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_bean_home.js
 京东汽车 = type=cron,cronexpr="0 10 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_car.js
-京东汽车积分兑换京豆 = type=cron,cronexpr="0 0 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_car_exchange.js
+京东汽车积分兑换京豆 = type=cron,cronexpr="0 0 * * *",timeout=750,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_car_exchange.js
 京东快递签到 = type=cron,cronexpr="20 11 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_kd.js
 京东直播(活动结束时间未知) = type=cron,cronexpr="20 12 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_live.js
 京东赚赚 = type=cron,cronexpr="20 11 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_jdzz.js
@@ -111,7 +111,22 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 获取京东微信ck = type=http-request,pattern=^https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js,script-update-interval=0
 东东爱消除 = type=cron,cronexpr="0 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xxl.js
 个护爱消除 = type=cron,cronexpr="40 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xxl_gh.js
-获取并提交助力码 = type=cron,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_get_share_code.js, cronexpr="20 13 * * 6", timeout=200, enable=true
+东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_blueCoin.js
+口袋书店 = type=cron,cronexpr="1 8,12,18 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_bookshop.js
+集鞭炮赢京豆 = type=cron,cronexpr="10 8,21 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_firecrackers.js
+获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_get_share_code.js
+宠汪汪强制为别人助力= type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com\/\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_help.js
+宠汪汪积分兑换奖品 = type=cron,cronexpr="0 0-16/8 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_reward.js
+宠汪汪邀请助力与赛跑助力 = type=cron,cronexpr="15 10 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
+宠汪汪助力更新Token = type=http-response,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code=, requires-body=1, max-size=0, script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
+宠汪汪助力获取Token = type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId=, requires-body=1, max-size=0, script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_run.js
+宠汪汪偷好友积分与狗粮 = type=cron,cronexpr="0 0-10/2 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_joy_steal.js
+京东年货节 = type=cron,cronexpr="1 7 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nh.js
+京东炸年兽🧨 = type=cron,cronexpr="10 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nian.js
+京东收🧨 = type=cron,cronexpr="50 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nianCollect.js
+京东炸年兽AR = type=cron,cronexpr="0 9 * * *",timeout=36000,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nian_ar.js
+京东炸年兽签到任务🧨 = type=cron,cronexpr="30 8 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nian_sign.js
+京东炸年兽小程序🧨 = type=cron,cronexpr="50 8 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_nian_wechat.js
 网易云获取Cookie = type=http-request,pattern=^https:\/\/music.163.com\/weapi\/user\/level,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,script-update-interval=0
 网易云签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,enable=ture
 中国联通获取Cookie1 = script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.cookie.js,type=http-request,pattern=^https?:\/\/act.10010.com\/SigninApp\/signin\/querySigninActivity.htm
