--- a/onetest.conf
+++ b/onetest.conf
@@ -37,6 +37,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 ^http://(www.)?google.cn https://www.google.com 302
 
 [Script]
+疯狂joy挂机 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy_coin.js
 5G狂欢城 = type=cron,cronexpr="0 0,6,12,18 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_5g.js
 京东手机狂欢城 = type=cron,cronexpr=0 0-18/6 * * *,enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_818.js
 京豆变动通知 = type=cron,cronexpr=2 9 * * *,enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_change.js
