--- a/onetest.conf
+++ b/onetest.conf
@@ -96,41 +96,20 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script
 微博去广告 = type=http-response,requires-body=true,max-size=1048576,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js,enable=true
 获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
 京东多合一签到 = type=cron,cronexpr="5 0 * * *",timeout=60,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
-京东农场 = type=cron,cronexpr="40 8-18/5 * * *",timeout=530,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_fruit.js,enable=true
-京东萌宠 = type=cron,cronexpr="20 8-18/5 * * *",timeout=650,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_pet.js, enable=true
-宠汪汪喂食 = type=cron,cronexpr="0 0 */2 * * *",timeout=350,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_joy_feedPets.js, enable=true
-京东天天加速 = type=cron,cronexpr="8 */3 * * *",timeout=350,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_speed.js, enable=true
 进店领豆 = type=cron,cronexpr="10 0 * * *",timeout=350,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_shop.js, enable=true
-京小超 = type=cron,cronexpr="11 1-23/5 * * *",timeout=350,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_superMarket.js, enable=true
-京小超领蓝币 = type=cron,cronexpr="11 0 * * *",timeout=350,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_blueCoin.js, enable=true
 京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=true
 京东全民开红包 = type=cron,cronexpr="9 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_redPacket.js, enable=true
 京东摇京豆 = type=cron,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_club_lottery.js,cronexpr="5 0 * * *",timeout=1150,enable=true
 京东抽奖机 = type=cron,cronexpr=11 0 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js
 京东排行榜 = type=cron,cronexpr=11 9 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js
 京东特权值 = type=cron,cronexpr=5 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js
-京东汽车 = type=cron,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_car.js, cronexpr="10 7 * * *", timeout=3600, enable=true
-京东汽车兑换 = type=cron,script-path=https://raw.githubusercontent.com/LXK9301/jd_scripts/master/jd_car_exchange.js, cronexpr="0 0 * * *", timeout=3600, enable=true
 京东直播(活动结束时间未知) = type=cron,cronexpr="20 12 * * *",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_live.js
 注销京东店铺会员卡 = type=cron,cronexpr="20 12 * * 6",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_unbind.js
-疯狂的joy日常任务 = type=cron,cronexpr="30 8 * * *",timeout=1750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_crazy_joy.js
-工业品爱消除 = type=cron,cronexpr="20 * * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_gyec.js, enabled=true
-京年团圆pick = type=cron,cronexpr="5 0 19,20 1 *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_vote.js, enabled=true
-小鸽有礼 = type=cron,cronexpr="5 7 * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xg.js, enabled=true
-京东秒秒币 = type=cron,cronexpr="10 7 * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_ms.js, enabled=true
-盲盒抽京豆 = type=cron,cronexpr="1 7 * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_mh.js, enabled=true
-官方号直播红包雨 = type=cron,cronexpr="0 0,9,11,13,15,17,19,20,21,23 * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain_offical.js, enabled=true
-年货直播红包雨 = type=cron,cronexpr="0 0,9,11,13,15,17,19,20,21,23 3,5,20-30/1 1,2 *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain_nian.js, enabled=true
-半点红包雨 = type=cron,cronexpr="30,31 12-23/1 * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain_half.js, enabled=true
-直播间红包雨 = type=cron,cronexpr="0,1 19-21/1 * * *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain2.js, enabled=true
-超级直播间红包雨 = type=cron,cronexpr="30,31 20-23/1 19 1 *" ,timeout=650,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_live_redrain.js, enabled=true
-宝洁美发屋 = type=cron,cronexprr="1 8,9 14-31/1 1 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_bj.js
-超级直播间幸运值抽京豆 = type=cron,cronexpr="10 20 15 1 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_mh_super.js
-神券京豆 = type=cron,cronexpr="1 7 13 1 *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_super_coupon.js
-京东粉丝专享 = type=cron,cronexpr="10 0 * * *",timeout=200,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js
-获取京东微信ck = type=http-request,pattern=^https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_wechat_sign.js,script-update-interval=0
-东东爱消除 = type=cron,cronexpr="0 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xxl.js
-个护爱消除 = type=cron,cronexpr="40 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/shylocks/Loon/main/jd_xxl_gh.js
+盲盒抽京豆 = type=cron,cronexpr="1 7 * * *" ,timeout=650,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_mh.js, enabled=true
+超级直播间幸运值抽京豆 = type=cron,cronexpr="10 20 15 1 *",timeout=200,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_mh_super.js
+神券京豆 = type=cron,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_super_coupon.js, cronexpr="1 8,12,18* * *", timeout=200, enable=true
+京东粉丝专享 = type=cron,cronexpr="10 0 * * *",timeout=200,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_wechat_sign.js
+获取京东微信ck = type=http-request,pattern=^https:\/\/wq\.jd\.com\/bases\/jssdk\/GetWxJsApiSign,requires-body=1,max-size=0,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_wechat_sign.js,script-update-interval=0
 网易云获取Cookie = type=http-request,pattern=^https:\/\/music.163.com\/weapi\/user\/level,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,script-update-interval=0
 网易云签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,enable=ture
 爱奇艺获取Cookie = type=http-request,pattern=^https?:\/\/iface(\d)?\.iqiyi\.com\/,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
