--- a/onetest.conf
+++ b/onetest.conf
@@ -53,7 +53,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 摇京豆 = type=cron,cronexpr="5 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_club_lottery.js
 crazyJoy任务 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy.js
 天天提鹅 = type=cron,cronexpr="10 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_daily_egg.js
-京喜工厂 = type=cron,cronexpr="10 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_dreamFactory.js
+京喜工厂 = type=cron,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_dreamFactory.js, cronexpr="10 * * * *", timeout=3600, enable=true
 京东手机年终奖 = type=cron,cronexpr="15 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_festival.js
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_fruit.js
 获取互助码 = type=cron,cronexpr="20 13 * * 6",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_get_share_code.js
