--- a/onetest.conf
+++ b/onetest.conf
@@ -53,12 +53,10 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 摇京豆 = type=cron,cronexpr="5 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_club_lottery.js
 crazyJoy任务 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy.js
 天天提鹅 = type=cron,cronexpr="10 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_daily_egg.js
-京喜工厂 = type=cron,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_dreamFactory.js, cronexpr="10 * * * *", timeout=3600, enable=true
-京东手机年终奖 = type=cron,cronexpr="15 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_festival.js
+京喜工厂 = type=cron,cronexpr="10 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_dreamFactory.js
+获取多账号京东Cookie = type=http-request,pattern=^https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,requires-body=1,max-size=0,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/JD_extra_cookie.js,script-update-interval=0
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_fruit.js
 获取互助码 = type=cron,cronexpr="20 13 * * 6",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_get_share_code.js
-京东神仙书院 = type=cron,cronexpr="20 8,12,22 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_immortal.js
-京东神仙书院答题 = type=cron,cronexpr="20 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_immortal_answer.js
 东东工厂 = type=cron,cronexpr="10 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jdfactory.js
 京东赚赚 = type=cron,cronexpr="10 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jdzz.js
 京东宠汪汪 = type=cron,cronexpr="15 0-23/2 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy.js
@@ -72,14 +70,12 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script
 京喜农场 = type=cron,cronexpr="0 9,12,18 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jxnc.js
 京东快递签到 = type=cron,cronexpr="10 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_kd.js
 京东直播 = type=cron,cronexpr="10-20/5 12 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_live.js
-盲盒抽京豆 = type=cron,cronexpr="1 7 * * *",enable=true,timeout=200,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_mh.js
 京东摇钱树 = type=cron,cronexpr="3 0-23/2 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_moneyTree.js
 京东秒秒币 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=200,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_ms.js
 点点券 = type=cron,cronexpr="10 0,20 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_necklace.js
 京东压岁钱 = type=cron,cronexpr="20 8,12 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_newYearMoney.js
 京东压岁钱抢百元卡 = type=cron,cronexpr="0 0 9,12,16,20 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_newYearMoney_lottery.js
 京东年货节 = type=cron,cronexpr="1 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_nh.js
-京东炸年兽🧨 = type=cron,cronexpr="0 9,12,20,21 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_nian.js
 东东萌宠 = type=cron,cronexpr="15 6-18/6 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_pet.js
 京东金融养猪猪 = type=cron,cronexpr="12 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_pigPet.js
 京东种豆得豆 = type=cron,cronexpr="1 7-21/2 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_plantBean.js
@@ -88,7 +84,6 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script
 进店领豆 = type=cron,cronexpr="10 0 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_shop.js
 东东小窝 = type=cron,cronexpr="16 22 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_small_home.js
 天天加速 = type=cron,cronexpr="8 0-23/3 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_speed.js
-京东超级盒子 = type=cron,cronexpr="20 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_super_box.js
 东东超市 = type=cron,cronexpr="11 * * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_superMarket.js
 赚京豆 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_syj.js
 注销京东会员卡 = type=cron,cronexpr="55 23 * * 6",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_unbind.js
@@ -101,13 +96,12 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script
 获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
 京东多合一签到 = type=cron,cronexpr="5 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
 进店领豆 = type=cron,cronexpr="10 0 * * *",timeout=350,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_shop.js, enable=true
-京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=true
+京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=false
 京东全民开红包 = type=cron,cronexpr="9 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_redPacket.js, enable=true
 京东摇京豆 = type=cron,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_club_lottery.js,cronexpr="5 0 * * *",timeout=1150,enable=true
 京东抽奖机 = type=cron,cronexpr=11 0 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js
 京东排行榜 = type=cron,cronexpr=11 9 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js
 京东特权值 = type=cron,cronexpr=5 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js
-注销京东店铺会员卡 = type=cron,cronexpr="20 12 * * 6",timeout=750,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_unbind.js
 神券京豆 = type=cron,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_super_coupon.js, cronexpr="10 0 * * *", timeout=200, enable=true
 网易云获取Cookie = type=http-request,pattern=^https:\/\/music.163.com\/weapi\/user\/level,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,script-update-interval=0
 网易云签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,enable=ture
