--- a/onetest.conf
+++ b/onetest.conf
@@ -42,7 +42,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 #淘宝历史价格
 淘宝比价1 = type=http-request,requires-body=true,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,enable=true
 淘宝比价2 = type=http-response,requires-body=true,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,enable=true
-疯狂joy挂机 = type=cron,cronexpr="10 7 * * *",enable=true,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy_coin.js,enable=true
+疯狂joy挂机 = type=cron,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy_coin.js,cronexpr="10 7 * * *",timeout=3600,enable=true
 京豆变动通知 = type=cron,cronexpr=2 9 * * *,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_change.js,enable=true
 领京豆额外奖励 = type=cron,cronexpr="10 7 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_home.js,enable=true
 东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_blueCoin.js,enable=true
