--- a/onetest.conf
+++ b/onetest.conf
@@ -42,7 +42,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 #淘宝历史价格
 淘宝比价1 = type=http-request,requires-body=true,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,enable=true
 淘宝比价2 = type=http-response,requires-body=true,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js,enable=true
-疯狂joy挂机 = type=cron,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy_coin.js,cronexpr="10 7 * * *",timeout=3600,enable=true
+疯狂joy挂机 = type=cron,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_crazy_joy_coin.js,cronexpr="10 7 * * *",timeout=3600, enable=true
 京豆变动通知 = type=cron,cronexpr=2 9 * * *,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_change.js, enable=true
 领京豆额外奖励 = type=cron,cronexpr="10 7 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_bean_home.js, enable=true
 东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_blueCoin.js, enable=true
@@ -56,7 +56,7 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",timeout=3600,script-path=https:
 京喜工厂 = type=cron,cronexpr="10 * * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_dreamFactory.js, enable=true
 获取多账号京东Cookie = type=http-request,pattern=^https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion,requires-body=1,max-size=0,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/JD_extra_cookie.js,script-update-interval=0
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_fruit.js, enable=true
-获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_get_share_code.js, enable=true
+获取互助码 = type=cron,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_get_share_code.js, cronexpr="20 13 * * 6", timeout=3600, enable=true
 东东工厂 = type=cron,cronexpr="10 * * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jdfactory.js, enable=true
 京东赚赚 = type=cron,cronexpr="10 0 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_jdzz.js, enable=true
 京东宠汪汪 = type=cron,cronexpr="15 0-23/2 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy.js, enable=true
@@ -79,7 +79,7 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",timeout=3600,script-path=https:
 东东萌宠 = type=cron,cronexpr="15 6-18/6 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_pet.js, enable=true
 京东金融养猪猪 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_pigPet.js, enable=true
 京东种豆得豆 = type=cron,cronexpr="1 7-21/2 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_plantBean.js, enable=true
-京东全民开红包 = type=cron,cronexpr=1 1 * * *,timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_redPacket.js, enable=true
+京东全民开红包 = type=cron,cronexpr="1 1 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_redPacket.js, enable=true
 闪购盲盒 = type=cron,cronexpr="20 8 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_sgmh.js, enable=true
 进店领豆 = type=cron,cronexpr="10 0 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_shop.js, enable=true
 东东小窝 = type=cron,cronexpr="16 22 * * *",timeout=3600,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_small_home.js, enable=true
@@ -97,9 +97,9 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",timeout=3600,script-path=https:
 京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=false
 京东全民开红包 = type=cron,cronexpr="9 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_redPacket.js, enable=true
 京东摇京豆 = type=cron,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_club_lottery.js,cronexpr="5 0 * * *",timeout=1150,enable=true
-京东抽奖机 = type=cron,cronexpr=11 0 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js
-京东排行榜 = type=cron,cronexpr=11 9 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js
-京东特权值 = type=cron,cronexpr=5 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js
+京东抽奖机 = type=cron,cronexpr="11 1 * * *",timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, enable=true
+京东排行榜 = type=cron,cronexpr="11 9 * * *",timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, enable=true
+京东特权值 = type=cron,cronexpr="5 8 * * *",timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js, enable=true
 神券京豆 = type=cron,script-path=https://gitee.com/mycode43/Loon/raw/master/scripts/jd_super_coupon.js, cronexpr="10 0 * * *", timeout=200, enable=true
 网易云获取Cookie = type=http-request,pattern=^https:\/\/music.163.com\/weapi\/user\/level,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,script-update-interval=0
 网易云签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.js,enable=ture
@@ -110,7 +110,7 @@ Bilibili签到 = type=cron,cronexpr="10 0 0 * * *",script-path=https://raw.githu
 盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js, requires-body=true, timeout=120
 中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
-10086-查话费 = type=cron,cronexpr=10 0 * * *,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js, enable=true
+10086-查话费 = type=cron,cronexpr="10 0 * * *",script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js, enable=true
 
 [MITM]
 enable = true
