--- a/onetest.conf
+++ b/onetest.conf
@@ -95,7 +95,7 @@ crazyJoy任务 = type=cron,cronexpr="10 7 * * *",timeout=3600,script-path=https:
 获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
 京东多合一签到 = type=cron,cronexpr="5 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, enable=true
 京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=false
-京东全民开红包 = type=cron,cronexpr="9 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_redPacket.js, enable=true
+京东全民开红包 = type=cron,cronexpr="1 1 * * *",timeout=20,script-path=https://gitee.com/lxk0301/jd_scripts/raw/master/jd_redPacket.js, enable=true
 京东摇京豆 = type=cron,script-path=https://raw.githubusercontent.com/iplcdn/jd_scripts-lxk0301/master/jd_club_lottery.js,cronexpr="5 0 * * *",timeout=1150,enable=true
 京东抽奖机 = type=cron,cronexpr="11 1 * * *",timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, enable=true
 京东排行榜 = type=cron,cronexpr="11 9 * * *",timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, enable=true
