--- a/onetest.conf
+++ b/onetest.conf
@@ -81,8 +81,8 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 进店领豆 = type=cron,cronexpr="2 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js,enable=true
 东东小窝 = type=cron,cronexpr="16 22 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js,enable=true
 天天加速 = type=cron,cronexpr="8 0-23/3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js,enable=true
-京东极速版红包 = type=cron,cronexpr="0 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js,enable=true
-京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js,enable=true
+京东极速版红包 = type=cron,cronexpr="0 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js,enable=false
+京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js,enable=false
 东东超市 = type=cron,cronexpr="13 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js,enable=true
 赚京豆 = type=cron,cronexpr="11 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js,enable=true
 取关京东店铺商品 = type=cron,cronexpr="55 23 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,enable=true
@@ -104,7 +104,7 @@ Bilibili签到 = type=cron,cronexpr="9 0 0 * * *",timeout=120,script-path=https:
 盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js, requires-body=true, timeout=3600
 中国移动1CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/LN\/uamrandcodelogin\/autoLogin,script-path=https://gitee.com/chavyleung/scripts/raw/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
 中国移动2CMCC = type=http-request,pattern=^https:\/\/clientaccess.10086.cn\/biz-orange\/BN\/realFeeQuery\/getRealFee,script-path=https://gitee.com/chavyleung/scripts/raw/master/10086/10086.fee.cookie.js,requires-body=true,debug=true
-10086-查话费 = type=cron,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js,cronexpr="30 0 * * *",enable=true
+10086-查话费 = type=cron,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js,cronexpr="30 0 * * *",enable=false
 
 [MITM]
 enable = true
