--- a/onetest.conf
+++ b/onetest.conf
@@ -52,10 +52,12 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 签到领现金 = type=cron,cronexpr="11 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cash.js,enable=true
 摇京豆 = type=cron,cronexpr="5 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_club_lottery.js,enable=true
 crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js,enable=true
+监控crazyJoy分红 = type=cron,cronexpr="10 12 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js,enable=true
 天天提鹅 = type=cron,cronexpr="10 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_egg.js,enable=true
 京喜工厂 = type=cron,cronexpr="11 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_dreamFactory.js,enable=true
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js,enable=true
 获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_get_share_code.js,enable=true
+京东国际盲盒 = type=cron,cronexpr="0 9,12,20,21 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global_mh.js,enable=true
 环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js,enable=true
 东东工厂 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdfactory.js,enable=true
 京东赚赚 = type=cron,cronexpr="10 4 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdzz.js,enable=true
@@ -76,6 +78,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 东东萌宠 = type=cron,cronexpr="15 6-18/6 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js,enable=true
 京东金融养猪猪 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js,enable=true
 京东种豆得豆 = type=cron,cronexpr="1 7-21/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js,enable=true
+京东保价 = type=cron,cronexpr="0 2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_price.js,enable=true
 京东全民开红包 = type=cron,cronexpr=1 1 * * *,timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_redPacket.js,enable=true
 闪购盲盒 = type=cron,cronexpr="20 8 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_sgmh.js,enable=true
 进店领豆 = type=cron,cronexpr="2 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js,enable=true
