--- a/onetest.conf
+++ b/onetest.conf
@@ -73,8 +73,10 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 宠汪汪助力更新Token = type=http-response,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code=, requires-body=1, max-size=0, script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
 宠汪汪助力获取Token = type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId=, max-size=0, script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js
 宠汪汪偷好友积分与狗粮 = type=cron,cronexpr="10 0-21/3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js,enable=false
+京小兑 = type=cron,cronexpr="35 10 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js,enable=true
 京喜农场 = type=cron,cronexpr="0 9,12,18 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js,enable=true
 京东快递签到 = type=cron,cronexpr="10 5 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js,enable=true
+京东直播 = type=cron,cronexpr="10-20/5 12 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live.js,enable=true
 京东摇钱树 = type=cron,cronexpr="3 0-23/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js,enable=true
 京东秒秒币 = type=cron,cronexpr="10 7 * * *",timeout=200,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js,enable=true
 点点券 = type=cron,cronexpr="10 0,20 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js,enable=true
