--- a/onetest.conf
+++ b/onetest.conf
@@ -43,7 +43,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 #淘宝历史价格
 淘宝比价1 = type=http-request,requires-body=true,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 淘宝比价2 = type=http-response,requires-body=true,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-疯狂joy挂机 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js,cronexpr="7 4 * * *",timeout=36000, enable=false
+crazyJoy挂机 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js,cronexpr="24 5,12 * * *",timeout=200,enable=false
 京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_change.js,enable=true
 领京豆额外奖励 = type=cron,cronexpr="10 1 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_bean_home.js,enable=true
 东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_blueCoin.js,enable=true
@@ -61,7 +61,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 东东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js,enable=true
 获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_get_share_code.js,enable=true
 京东国际盲盒 = type=cron,cronexpr="0 9,12,20,21 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global_mh.js,enable=true
-环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js,enable=false
+环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js,enable=true
 东东工厂 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdfactory.js,enable=true
 京东赚赚 = type=cron,cronexpr="10 4 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdzz.js,enable=true
 京东宠汪汪 = type=cron,cronexpr="15 0-23/2 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy.js,enable=true
