--- a/onetest.conf
+++ b/onetest.conf
@@ -91,7 +91,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 闪购盲盒 = type=cron,cronexpr="20 8 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_sgmh.js,enable=true
 进店领豆 = type=cron,cronexpr="2 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js,enable=true
 东东小窝 = type=cron,cronexpr="16 22 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js,enable=true
-天天加速 = type=cron,cronexpr="8 0-23/3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js,enable=true
+天天加速 = type=cron,cronexpr="8 0-23/3 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js,enable=false
 京东极速版红包 = type=cron,cronexpr="0 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js,enable=false
 京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js,enable=false
 东东超市 = type=cron,cronexpr="13 * * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js,enable=true
@@ -99,6 +99,7 @@ crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https:
 取关京东店铺商品 = type=cron,cronexpr="50 23 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js,enable=false
 手机尚学季 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg.js, cronexpr="0 0 0 * * *", timeout=3600, enable=true
 京喜签到 = type=cron,cronexpr="8 0 * * *",timeout=3600,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js,enable=true
+东东健康社区 = type=cron,script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_health.js, cronexpr="0 0,6,12,18 * * *", timeout=3600, enable=true
 微博 = type=http-response,requires-body=true,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 微博去广告 = type=http-response,requires-body=true,max-size=1048576,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 获取京东Cookie = type=http-request,pattern=https:\/\/api\.m\.jd\.com\/client\.action.*functionId=signBean,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
