--- a/onetest.conf
+++ b/onetest.conf
@@ -16,6 +16,17 @@ update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onete
 
 [Rule]
 #需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/NetEaseMusic/NetEaseMusic.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Baidu/Baidu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouBan/DouBan.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/DouYin/DouYin.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Weibo/Weibo.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Zhihu/Zhihu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/XiaoHongShu/XiaoHongShu.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/China/China.list,DIREC
 DOMAIN-SUFFIX,touker.com,DIRECT
 DOMAIN-SUFFIX,zhangle.com,DIRECT
 DOMAIN-SUFFIX,qlogo.cn,DIRECT
@@ -547,16 +558,20 @@ DOMAIN-SUFFIX,telegra.ph,PROXY
 DOMAIN-SUFFIX,telegram.me,PROXY
 DOMAIN-SUFFIX,telegram.org,PROXY
 DOMAIN-SUFFIX,telesco.pe,PROXY
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
-IP-CIDR,91.108.12.0/22,PROXY,no-resolve
 IP-CIDR,91.108.16.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,91.108.12.0/22,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
-IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
-IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
+IP-CIDR,91.105.192.0/23,PROXY,no-resolve
+IP-CIDR,91.108.20.0/22,PROXY,no-resolve
+IP-CIDR,185.76.151.0/24,PROXY,no-resolve
+IP-CIDR,2001:b28:f23d::/48,PROXY,no-resolve
+IP-CIDR,2001:b28:f23f::/48,PROXY,no-resolve
+IP-CIDR,2001:67c:4e8::/48,PROXY,no-resolve
+IP-CIDR,2001:b28:f23c::/48,PROXY,no-resolve
+IP-CIDR,2a0a:f280::/32,PROXY,no-resolve
 DOMAIN-SUFFIX,dnsleaktest.com,PROXY
 DOMAIN-SUFFIX,dnsleak.com,PROXY
 DOMAIN-SUFFIX,expressvpn.com,PROXY
