--- a/onetest.conf
+++ b/onetest.conf
@@ -7,7 +7,7 @@ dns-server = https://dns.alidns.com/dns-query, https://1.12.12.12/dns-query
 ipv6 = false
 prefer-ipv6 = false
 #搭配得当起到类似于 DNS 分流
-dns-fallback-system = system
+dns-fallback-system = false
 dns-direct-system = true
 icmp-auto-reply = true
 always-reject-url-rewrite = false
